# stream

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml
cmake/: configure_tests.cmake  cpp_core_find_package.cmake  cxx_coro_streamConfig.cmake.in  install_config.cmake  streamConfig.cmake.in
include/core/fp/: either.h  either_decl.h  fold.h  match.h  option.h  option_decl.h  try.h  try_decl.h
include/core/fp/detail/: any_type.h  decorator.h
include/coro/: async_operation.h  base.h  consumer.h  generate.h  generator.h  lowres_clock.h  lowres_yield.h  periodically_yield.h  processor.h  real_scheduler.h  scheduler.h  strand.h  time_marker.h  transformer.h  virtual_scheduler.h  yield.h  yield_every.h
include/coro/generate/: associative.h  associative_decl.h  char.h  char_decl.h  constant.h  container.h  container_decl.h  decl.h  filter.h  floating.h  floating_decl.h  integral.h  integral_decl.h  pair.h  pair_decl.h  sequence.h  sequence_decl.h  take.h  util.h  vector.h  vector_decl.h  zip.h  zip_pair.h
include/coro/strand/: async_operation.h  lowres_yield.h  periodically_yield.h  real_scheduler.h  scheduler.h  strand.h  time_marker.h  virtual_scheduler.h  yield.h  yield_every.h
include/coro/stream/: adapt.h  alternate.h  apply.h  associative.h  associative_decl.h  chaining.h  char.h  char_decl.h  choose.h  collect.h  constant.h  container.h  container_decl.h  decl.h  draw.h  filter.h  flatten.h  floating.h  floating_decl.h  generator.h  group.h  group_tuple.h  integral.h  integral_decl.h  iota.h  log_normal_sampler.h  once.h  optionalize.h  pair.h  pair_decl.h  pipeline.h  range.h  reduce.h  repeat.h  sampler.h  sequence.h  sequence_decl.h  stream.h  string.h  string_decl.h  (+16 more)
include/coro/stream/detail/: fixed.h  random.h
include/coro/stream/io/: generator_istream.h  read_lines.h  write_lines.h
include/coro/stream/sampler/: all.h  array.h  bool.h  char.h  chrono.h  container.h  floating.h  integral.h  log_normal_integral.h  pair.h  string.h  tuple.h
src/coro/: lowres_clock.cpp  real_scheduler.cpp  scheduler.cpp  virtual_scheduler.cpp  yield.cpp
src/coro/strand/: real_scheduler.cpp  scheduler.cpp  virtual_scheduler.cpp  yield.cpp
src/coro/stream/: uniform_chrono.cpp
src/coro/stream/detail/: random.cpp
src/coro/stream/io/: read_lines.cpp
src/coro/stream/sampler/: char.cpp  chrono.cpp  string.cpp
test/: CMakeLists.txt
test/src/core/fp/: test_fp_either.cpp  test_fp_fold.cpp  test_fp_option.cpp  test_fp_try.cpp
test/src/coro/: test_consumer.cpp  test_generate.cpp  test_generator.cpp  test_processor.cpp  test_stream.cpp  test_stream_io.cpp  test_stream_modify.cpp  test_stream_samplers.cpp  test_stream_types.cpp  test_stream_util.cpp  test_transformer.cpp
test/src/coro/stream/: test_stream_base.cpp  test_stream_generator.cpp  test_stream_io.cpp  test_stream_samplers.cpp  test_stream_types.cpp
